--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+certifi>=2019.9.11
 docopt==0.6.2
 pymongo==3.2.2
 python-dateutil==2.5.3
 pyyaml==3.13
-requests==2.10.0
+requests==2.22.0
 schema==0.5.0
 selenium==2.53.5
 splinter==0.7.3
+urllib3==1.25.6
